test/golden96/Hello {length name}.16675806454852491955.golden

INITIALPATH:7:36: error:
    • Variable not in scope: name
    • In the quasi-quotation: [fmt|Hello {length name}|]
  |
7 | main = putStrLn [fmt|Hello {length name}|]
  |                                    ^^^^
